<resources>
    <string name="app_name">Learning SQL</string>
    <string name="nameApp">Learning SQL</string>
    <string name="tiposdeDadosSQL">
        A database table can store different data. And in that table each column can have a field assigned to a different <b>Data Type</b>.
        \nFor example we can have a column to store <b>DATA</b>. Another column to record just <b>NUMBERS</b>. Or <b>TEXT</b>.
        \nIf we try to insert <i>text</i> into a column that only allows <i>numbers</i>, the database will throw an error.
        \nSome of the Data types are:
        \n
        \n<b>INT</b> - Integer from -2.147.483.648 to 2.147.483.647;
        \n<b>SMALLINT</b> - Integer from -32768 to 32767;
        \n<b>MONEY</b> - Monetary or currency values of -922.337.203.685.477,5808 to 922.337.203.685.477,5807;
        \n<b>DATE</b> - Date;
        \n<b>DATETIME</b> - Date and time;
        \n<b>CHAR</b> - Character data types that are of fixed length;
        \n<b>VARCHAR</b> - Character data types that are variable length;
        \n<b>TEXT</b> - Fixed and variable-length data types for storing large Unicode and non-Unicode character and binary data.
        \n
        \nAmong others, such as:
        \n<b>DECIMAL</b>;
        \n<b>NUMERIC</b>;
        \n<b>FLOAT</b>;
        \n<b>REAL</b>.
    </string>
    <string name="textIntroducao">A database is an organized collection of structured information, or data. Usually stored electronically on a computer system. A database is usually controlled by a database management system</string>
    <string name="textTable">The Database can be compared to a spreadsheet of information. Each column corresponds to an Attribute.
        \nIn the case below we have several attributes from a table called <font color="#ff0000"><b>CUSTOMERS</b></font>.
        \nWe have the attributes <font color="#0000ff"><b>NAME</b></font>, <font color="#0000ff"><b>SURNAME</b></font>, <font color="#0000ff"><b>DATE BIRTH</b></font>, <font color="#0000ff"><b>PHONE</b></font> and <font color="#0000ff" ><b>CPF</b></font></string>
    <string name="textDescricao">Each line has information that can be Inserted, Edited and Deleted. In the example highlighted above, for example, we have a registration of a person with the following data:
    </string>
    <string name="textDescricaoTupla">Name: Marcia,  Last name: Brandão,
        Born on 01/15/1995,
        Phone (31)99314-5498 and CPF 658.454.151-87</string>
    <string name="introducaoSGBD"> To manipulate the data in our base we need a DBMS, which is the Database Management System.
       \nSince we learned the concept, let start practicing SQL (Structure Query Language).
       \nIn our case we will use <b>SQLite</b>, but we must remember that there are other DBMS that also perform the same function of manipulating stored data.
        As said, ours will be <b>SQLite</b>.
    </string>
    <string name="nomeBotao">Next</string>
    <string name="nomeBotaoVoltar">Back</string>
    <string name="sql">The SQL language can be divided into <b>DML</b> (Data Manipulation Language) and <b>DDL</b> (Data Definition Language).
    \nWhere DML is focused on Data Manipulation and DDL is focused on Data Definition.
    </string>
    <string name="sqlTit"><font color="#ffffff"><b>SQL</b></font></string>
    <string name="insert">- Insert data into a table</string>
    <string name="update">- Change data in a table</string>
    <string name="select">- Select data in a table</string>
    <string name="delete">- Delete data from a table</string>
    <string name="drop">- Delete a table</string>
    <string name="alter">- Change the structure of a table</string>
    <string name="create">- Create a table</string>
    <string name="create_tit">Learning SQL - CREATE</string>
    <string name="select_tit">Learning SQL - SELECT</string>
    <string name="drop_tit">Learning SQL - DROP</string>
    <string name="delete_tit">Learning SQL - DELETE</string>
    <string name="update_tit">Learning SQL - UPDATE</string>
    <string name="alter_tit">Learning SQL - ALTER</string>
    <string name="insert_tit">Learning SQL - INSERT</string>
    <string name="instruction_create">The "Create" has the function of creating the table in the database.
        \nThe query must contain the following pattern:
    </string>
    <string name="instruction_select">Using the <b><font color="#0000FF">*</font></b> in the SELECT command indicates that we are looking for <b>all</b> the columns of the table in our result. We could select just one column or more than one column.
        \nFor example:
        \n<b>SELECT <font color="#0000ff">NAME</font> FROM <font color="#FF0000">CUSTOMER</font></b> would only return the NAME of the customers.
        \n<b>SELECT <font color="#0000ff">NAME, CPF</font> FROM <font color="#FF0000">CUSTOMER</font></b> would return NAME and CPF of the clients.
        \nFeel free to test the queries below:
    </string>
    <string name="instruction_select3">We can use clauses inside a WHERE(where), so we can filter our results. For example:
    </string>
    <string name="instruction_drop">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Delegadis gente finis, bibendum e</string>
    <string name="instruction_delete">At this point you will be deleting any line from the database that meets the conditions you placed in the Where.
        \n In the above case, we delete the client that has the code = 2.
        \n But we could delete using other columns as a reference.
        For example, delete all customers who have an empty CPF. Or who has a specific CPF.
        \n We have to be careful, because if we execute a query without the defined conditions, it will execute the action for all the lines of the table.
        \n The query <b><font color="#ff0000">DELETE FROM CLIENT</font></b> would delete ALL rows from the table.
    </string>
    <string name="instruction_update">VWe want to change the name <b><font color="#00B1FF">"''JOÃO C.''"</font></b> to <b><font color="#00B1FF">"''JOÃO CARLOS''"</font></b>.</string>
    <string name="instruction_insert2">
        INSERT INTO <font color="#ff0000">CUSTOMER</font> (<font color="#00ff00">CODE</font>, <font color="#00ff00">NAME</font>, <font color="#00ff00">CPF</font>)
        \nVALUES
        \n (<font color="#00ff00">1</font>, <font color="#00ff00">"''AIRTON S.''"</font>, <font color="#00ff00">"''154.854.846-21''"</font>),
        \n (<font color="#00ff00">2</font>, <font color="#00ff00">"''JOAO C.''"</font>, <font color="#00ff00">"''664.844.646-24''"</font>),
        \n (<font color="#00ff00">3</font>, <font color="#00ff00">"''MARIA S.''"</font>, <font color="#00ff00">"''194.747.966-34''"</font>);
    </string>
    <string name="instruction_create2">CREATE TABLE <font color="#ff0000">CUSTOMER</font>
        \n(<font color="#00ff00">CODE</font> <font color="#0000ff">INT</font>,
        \n<font color="#00ff00">NAME</font> <font color="#0000ff">CHAR</font>,
        \n<font color="#00ff00">CPF</font> <font color="#0000ff">CHAR</font>)</string>
    <string name="query_example_create">CREATE TABLE</string>
    <string name="query_example_nometabela">TABLE NAME</string>
    <string name="query_example_primcol">(FIRST COLUMN + TYPE ,</string>
    <string name="query_example_segcol">SECOND  COLUMN + TYPE ,</string>
    <string name="query_example_ultcol">LAST COLUMN + TYPE)</string>
    <string name="instruction_select2">
        SELECT <font color="#0000ff">*</font> FROM <font color="#ff0000">CUSTOMER</font>
    </string>
    <string name="instruction_select4">
        SELECT <font color="#0000ff">*</font> FROM <font color="#ff0000">CUSTOMER</font>
        \nWHERE <font color="#00ff00">CODE</font> = <font color="#0000ff">2</font>
    </string>
    <string name="instruction_select5">
        This way we will only return the lines that contain CODE = 2.
        The <b>WHERE</b> is a filter of our results.
        \n\nIn a table where we have information like <font color="#00B1FF"><b>ADDRESS, GENDER, DATE OF BIRTH</b></font> we can use the <b><i>WHERE</i> </b> to return only the results we want in the filter.
        \n\nFor example:
        \n<b>SELECT * FROM <font color="#ff0000">clients</font> WHERE <font color="#0000FF">genre = F</font> AND <font color="#0000FF">birthdate > "'1999-01-01'";</font></b>
        \n\nIt would only return the <font color="#ff0000">clients</font> of the <font color="#0000FF">GENDER Female</font>, and with the <font color="#0000FF">Date of birth GREATER than January 1, 1999.</font>
    </string>
    <string name="instruction_drop2">DROP TABLE <font color="#ff0000">CUSTOMER</font></string>
    <string name="instruction_drop3">After executing the above command, our table will be deleted from the Database, with all its data already inserted.</string>
    <string name="instruction_delete2">DELETE FROM <font color="#ff0000">CUSTOMER</font>
        \nWHERE <font color="#00ff00">CODE</font> = <font color="#0000ff">2</font></string>
    <string name="instruction_update2">UPDATE <font color="#FF0000">CUSTOMER</font>
        \nSET <font color="#00ff00">NAME</font> = <font color="#0000ff">"''JOÃO CARLOS''"</font>
        \nWHERE <font color="#00ff00">CODE</font> = <font color="#0000ff">2</font>
    </string>
    <string name="instruction_update3">To perform the above change, the query would be:</string>
    <string name="instruction_alter_renomeando">ALTER TABLE <font color="#ff0000">CUSTOMER</font>
        \nRENAME COLUMN <font color="#00ff00">CODE</font>
        \nTO  <font color="#00ff00">CODE</font></string>
    <string name="instruction_alter_excluindo">ALTER TABLE <font color="#ff0000">CUSTOMER</font>
        \nDROP COLUMN <font color="#00ff00">PHONE</font></string>
    <string name="instruction_alter_adicionando">ALTER TABLE <font color="#ff0000">CUSTOMER</font>
        \nADD <font color="#00ff00">PHONE</font> <font color="#0000ff">INT</font>
    </string>
    <string name="alter_instruction_renomeando">With a table already created, it is possible to rename a column within the table. To change the column name, follow the instructions below.</string>
    <string name="alter_instriction_adicionando">Even after creating a table, sometimes it is necessary to add a column to the table. For example in the case below, we will add the column<font color="#00ff00">TELEFONE</font> dentro da tabela <font color="#ff0000">CLIENTE</font>.</string>
    <string name="alter_instruction_excluindo">It is also possible to delete a column within the table. In the example below, we will delete the column<font color="#00ff00">PHONE</font> from the table <font color="#ff0000">CUSTOMER</font>. </string>
    <string name="create_descricao">Following the example query, the guideline is to create a Table with the name <font color="#FF0000">CUSTOMER</font>. And that has the Columns:
        \n<font color="#00ff00">CODE</font> of type <font color="#0000FF">INT</font>;
        \n<font color="#00ff00">NAME</font> of type <font color="#0000FF">CHAR</font>;
        \n<font color="#00ff00">CPF</font> of type <font color="#0000FF">CHAR</font>.
    </string>
    <string name="update_pratica">The UPDATE is a command to change data that has already been inserted in the table. So if we want to change some information on our table we will use the UPDATE statement.</string>
    <string name="toolbarInicio">🏠 Home</string>
    <string name="toolbarFlutter">🚀 Learn Flutter</string>
    <string name="toolbarAvalie">🏅 Avalie our App</string>
    <string name="toolbarDeveloper">👨‍💻 Support or Developer</string>
</resources>