<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbarInicio"
        android:orderInCategory="100"
        android:title="@string/toolbarInicio"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/toolbarFlutter"
        android:orderInCategory="100"
        android:title="@string/toolbarFlutter"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/toolbarRate"
        android:orderInCategory="100"
        android:title="@string/toolbarAvalie"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/toolbarDonate"
        android:orderInCategory="100"
        android:title="@string/toolbarDeveloper"
        app:showAsAction="never"
        />
</menu>